# lopa-lang

./: .gitignore  Cargo.toml  bench1.lua  bench2.lua  bench3.lua  binary  bump.lua  for_test.lua  inspect.lua  loop_study.lua  mutli.lua  node_def.lopa  syntax_draft.md  syntax_draft_old.md  temp.lua  test  test.c  test.gleam  test.lopa  test.lua  test1.lopa  test_co_in_fn.lua
__src_old/: common.rs  lib.rs  main.rs  tokenizer.rs  type_check.rs
__src_old/lopa/: std.lopa
__src_old/lsp/: compiler_error.rs  mod.rs  queries.rs
la-arena/: Cargo.toml
la-arena/la-arena/: Cargo.toml
la-arena/src/: lib.rs  map.rs
lopa/: Cargo.toml
lopa-core/: Cargo.toml
lopa-core/src/: analysis.rs  ast.rs  codegen.rs  common.rs  def.rs  ide.rs  indexmap_hash.rs  lexer.rs  lib.rs  parser.rs  parsing.rs  ptr.rs  range_max.rs  ty.rs  ustr_hash.rs  vfs.rs
lopa-core/src/def/: ast_id_map.rs  body.rs  body_map.rs  contents_map.rs  hir.rs  ir.rs  ir_def.rs  item_map.rs  items_map.rs  lower.rs  lower2.rs  lowering.rs  mir.rs  mod.rs  resolver.rs  scope.rs  ty.rs  use_tree_map.rs
lopa-core/src/def/snapshots/: lopa_core__def__lower__test__func.snap
lopa-core/src/hir/: lower.rs  mod.rs  module.rs
lopa-core/src/ide/: base.rs  diagnostics.rs  format.rs  mod.rs  resolve.rs  scope.rs
lopa-core/src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs  parser1.rs  token_set.rs
lopa-core/src/parsing/snapshots/: lopa_core__parsing__parser__test__attribs.snap  lopa_core__parsing__parser__test__block-2.snap  lopa_core__parsing__parser__test__block-3.snap  lopa_core__parsing__parser__test__block-4.snap  lopa_core__parsing__parser__test__block-4.snap.new  lopa_core__parsing__parser__test__block.snap  lopa_core__parsing__parser__test__enum_item.snap  lopa_core__parsing__parser__test__expr-10.snap  lopa_core__parsing__parser__test__expr-11.snap  lopa_core__parsing__parser__test__expr-12.snap  lopa_core__parsing__parser__test__expr-13.snap  lopa_core__parsing__parser__test__expr-14.snap  lopa_core__parsing__parser__test__expr-15.snap  lopa_core__parsing__parser__test__expr-16.snap  lopa_core__parsing__parser__test__expr-17.snap  lopa_core__parsing__parser__test__expr-18.snap  lopa_core__parsing__parser__test__expr-19.snap  lopa_core__parsing__parser__test__expr-2.snap  lopa_core__parsing__parser__test__expr-20.snap  lopa_core__parsing__parser__test__expr-21.snap  lopa_core__parsing__parser__test__expr-22.snap  lopa_core__parsing__parser__test__expr-23.snap  lopa_core__parsing__parser__test__expr-24.snap  lopa_core__parsing__parser__test__expr-25.snap  lopa_core__parsing__parser__test__expr-26.snap  lopa_core__parsing__parser__test__expr-28.snap  lopa_core__parsing__parser__test__expr-29.snap  lopa_core__parsing__parser__test__expr-3.snap  lopa_core__parsing__parser__test__expr-30.snap  lopa_core__parsing__parser__test__expr-31.snap  lopa_core__parsing__parser__test__expr-4.snap  lopa_core__parsing__parser__test__expr-5.snap  lopa_core__parsing__parser__test__expr-6.snap  lopa_core__parsing__parser__test__expr-7.snap  lopa_core__parsing__parser__test__expr-8.snap  lopa_core__parsing__parser__test__expr-9.snap  lopa_core__parsing__parser__test__expr.snap  lopa_core__parsing__parser__test__file.snap  lopa_core__parsing__parser__test__fn_item-2.snap  lopa_core__parsing__parser__test__fn_item-3.snap  (+92 more)
lopa-core/src/semantics/: types.rs
lopa-core/src/ty/: infer.rs  mod.rs
lopa-lsp/: Cargo.toml
lopa-lsp/src/: base.rs  convert.rs  handler.rs  lib.rs  main.rs  uri_ext.rs  vfs.rs  vfs_ext.rs
lopa/src/: compiler.rs  main.rs
src/: ast.rs  code_gen.rs  code_gen_new.rs  code_gen_old.rs  common.rs  expr_parser.rs  ir.rs  ir_new.rs  lib.rs  luajit.rs  main.rs  parser.rs  position.rs  shared_mut.rs  token.rs  tokenizer.rs  type_check.rs  type_check_old.rs  types.rs  uleb128_33.rs
src/lsp/: ast.rs  lexer.rs  mod.rs  parser.rs
syntree/: .cargo_vcs_info.json  Cargo.toml
syntree/src/: builder.rs  edit.rs  flavor.rs  links.rs  pointer.rs
syntree/src/node/: node_impl.rs
tree-sitter-lopa/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example_file.lopa  go.mod  grammar.js  move_queries.py  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-lopa/bindings/c/: tree-sitter-lopa.pc.in
tree-sitter-lopa/bindings/c/tree_sitter/: tree-sitter-lopa.h
tree-sitter-lopa/bindings/go/: binding.go  binding_test.go
tree-sitter-lopa/bindings/node/: binding.cc  index.js
tree-sitter-lopa/bindings/python/tests/: test_binding.py
tree-sitter-lopa/bindings/python/tree_sitter_lopa/: __init__.py  binding.c
tree-sitter-lopa/bindings/rust/: build.rs  lib.rs
tree-sitter-lopa/bindings/swift/TreeSitterLopaTests/: TreeSitterLopaTests.swift
tree-sitter-lopa/queries/: highlights.scm
tree-sitter-lopa/queries/lopa/: highlights.scm
tree-sitter-lopa/src/: grammar.json  node-types.json  parser.c
