[workspace]
resolver = "3"
members = ["lopa", "lopa-lsp", "lopa-core", "la-arena"]

[workspace.dependencies]
logos = "0.16.1"
rowan = "0.16.1"
anyhow = "1.0.100"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "from",
    "debug",
] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
itertools = "0.14.0"
salsa = { version = "0.26.2" }
slotmap = "1.1.1"
ustr = "1.1.0"
indexmap = "2"
insta = { version = "1.47.2", features = ["yaml"] }
dashmap = "6.1.0"
bimap = "0.6.3"

[profile.dev.package.insta]
opt-level = 3
# thiserror = "2.0.17"

# [package]
# name = "lopa-lang"
# version = "0.1.0"
# edition = "2024"
#
# [dependencies]
# proc-macro2 = "1.0.106"
# syn = { version = "2.0.114", features = ["full", "extra-traits"] }
