[package]
name = "lopa-core"
version = "0.1.0"
edition = "2024"
workspace = "../"

[dependencies]
logos.workspace = true
rowan.workspace = true
anyhow.workspace = true
salsa.workspace = true
derive_more.workspace = true
strum.workspace = true
strum_macros.workspace = true
itertools.workspace = true
ustr.workspace = true
indexmap.workspace = true
dashmap.workspace = true
paste = "1.0.15"
notify-rust = "4.13.1"

[dev-dependencies]
insta.workspace = true
