[package]
name = "lopa-core"
version = "0.1.0"
edition = "2024"
workspace = "../"

[dependencies]
logos.workspace = true
rowan.workspace = true
anyhow.workspace = true
salsa.workspace = true
derive_more.workspace = true
strum.workspace = true
strum_macros.workspace = true
itertools.workspace = true
ustr.workspace = true
indexmap.workspace = true
bimap.workspace = true
dashmap.workspace = true
la-arena = { path = "../la-arena" }
paste = "1.0.15"
notify-rust = "4.13.1"
identity-hash = "0.1.0"

[dev-dependencies]
insta.workspace = true
