[package]
name = "lopa-core"
version = "0.1.0"
edition = "2024"

[dependencies]
logos.workspace = true
anyhow.workspace = true
itertools.workspace = true
indexmap.workspace = true

salsa = { path = "../salsa" }
syntree = { path = "../syntree" }
la-arena = { path = "../la-arena" }
notify-rust = "4.13.1"
identity-hash = "0.1.0"
bimap = "0.6.3"
hashbrown = "0.17.1"

[dev-dependencies]
insta.workspace = true
