[package]
name = "lopa-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
notify-rust = "4.12.0"
petgraph = "0.8.3"
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp-server = "0.23.0"
lopa-core = { path = "../lopa-core" }
salsa.workspace = true
itertools.workspace = true
derive_more.workspace = true
crop.workspace = true
bimap = "0.6.3"
slotmap = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow.workspace = true
