[package]
name = "lopa-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp-server = "0.23.0"
lopa-core = { path = "../lopa-core" }

itertools.workspace = true
salsa.workspace = true
anyhow.workspace = true
walkdir.workspace = true

notify-rust = "4.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustc-hash = "2.1.2"
dashmap = "6.2.1"
